--- a/app/src/main/res/drawable/background_bottom.xml
+++ b/app/src/main/res/drawable/background_bottom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:bottomLeftRadius="15dp"
-        android:bottomRightRadius="15dp"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
         android:topLeftRadius="0dp"
         android:topRightRadius="0dp" />
     <stroke
         android:width="1dp"
-        android:color="#282828" />
+        android:color="@color/border" />
 
-    <solid android:color="#222222" />
+    <solid android:color="@color/foreground" />
 </shape>
