--- a/app/src/main/res/drawable/background_top.xml
+++ b/app/src/main/res/drawable/background_top.xml
@@ -3,11 +3,11 @@
     <corners
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp"
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp" />
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp" />
     <stroke
         android:width="1dp"
-        android:color="#282828" />
+        android:color="@color/border" />
 
-    <solid android:color="#222222" />
+    <solid android:color="@color/foreground" />
 </shape>
