--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AndroidFliqlo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AndroidFliqlo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        <item name="colorPrimary">@color/background</item>
+        <item name="colorPrimaryVariant">@color/foreground</item>
+        <item name="colorOnPrimary">@color/text_color</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="fontFamily">@font/oppo_sans_r</item>
+        <item name="android:fontFamily">@font/oppo_sans_r</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:ignore="NewApi">shortEdges</item>
     </style>
+
+    <style name="font">
+        <item name="android:textSize">180dp</item>
+        <item name="fontFamily">@font/oppo_sans_h</item>
+        <item name="android:fontFamily">@font/oppo_sans_h</item>
+    </style>
+
+    <declare-styleable name="AlignedTextView">
+        <attr format="integer" name="alignment"/>
+    </declare-styleable>
 </resources>
