--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,25 +2,20 @@
     <!-- Base application theme. -->
     <style name="Theme.AndroidFliqlo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/background</item>
+        <item name="colorPrimaryVariant">@color/foreground</item>
         <item name="colorOnPrimary">@color/text_color</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-
         <item name="fontFamily">@font/oppo_sans_r</item>
         <item name="android:fontFamily">@font/oppo_sans_r</item>
-        <item name="android:background">@color/black</item>
+        <item name="android:background">@color/background</item>
         <item name="android:windowFullscreen">true</item>
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:ignore="NewApi">shortEdges</item>
     </style>
 
     <style name="font">
-        <item name="android:textSize">160dp</item>
+        <item name="android:textSize">180dp</item>
         <item name="fontFamily">@font/oppo_sans_h</item>
         <item name="android:fontFamily">@font/oppo_sans_h</item>
     </style>
